Fix for bug 192124. Filing more than one bookmark in a newly created folder cause bookmarks not to be saved. r=sdagley, sr=peterv, a=asa, patch by ccarlen